@@ -9,6 +9,9 @@
 # 	autoconf (optional - used by munin-config)
 #
 # $Log$
+# Revision 1.3  2004/01/30 14:40:08  jimmyo
+# Added max value to generic/vmstat plugin (Deb#225489).
+#
 # Revision 1.2  2004/01/29 19:00:42  jimmyo
 # Make vmstat plugin more portable (SF#882352).
 #
@@ -54,8 +57,10 @@ if [ "$1" = "config" ]; then
 	echo 'graph_vlabel process states'
 	echo 'wait.label running'
 	echo 'wait.type GAUGE'
+	echo 'wait.max 500000'
 	echo 'sleep.label I/O sleep'
 	echo 'sleep.type GAUGE'
+	echo 'sleep.max 500000'
 	exit 0
 fi
 
